crates/model/tests/compile_fail/fsm_entry_not_in_states.stderr
error: entry state not found in states list
 --> tests/compile_fail/fsm_entry_not_in_states.rs:9:16
  |
9 |         entry: nonexistent,
  |                ^^^^^^^^^^^
